# voxel-meshing-v2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  imgui_config.ini
include/: application.h  benchmark_config.h  benchmark_runner.h  camera.h  camera_path.h  compute.h  line.h  memory_query.h  mesh.h  model.h  shader.h  timer.h  vox_instance.h  vox_scene.h
lib/cgltf/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/nlohmann/: CMakeLists.txt
lib/ogt_vox/: CMakeLists.txt  ogt_vox.cpp  ogt_wrapper.cpp  ogt_wrapper.h
lib/stb_image/: CMakeLists.txt
res/: block.vox  camera_paths.json  castle_small.vox  sphere.vox  worst_case.vox
shader/: apply_rotations.comp  calculate_buffer_size.comp  generate_mesh.comp  generate_mesh_slicing.comp  line.frag  line.vert  shader.frag  shader.vert  slicing_v2.comp  slicing_x.comp  slicing_y.comp  slicing_z.comp
shader/deprecated/: remap_to_8s.comp
src/: application.cpp  benchmark_runner.cpp  camera.cpp  line.cpp  main.cpp  mesh.cpp  model.cpp  vox_instance.cpp  vox_scene.cpp
